Name:            Atavachron
Version:         0.1
Cabal-Version:   >= 1.8
License:         GPL-3
License-File:    LICENSE
Author:          Tim Williams
Maintainer:      info@timphilipwilliams.com
Stability:       Experimental
Synopsis:        Fast, scalable and secure de-duplicating backup.
Build-Type:      Simple

Library
  Hs-Source-Dirs:  src
  if impl(ghc < 8.0)
   Build-Depends:  semigroups
  Build-Depends:   base, containers, hashable, mtl, parsec, wl-pprint,
                   unordered-containers, directory, filepath, random,
                   time, text, streaming, unix, exceptions, bytestring,
                   resourcet, async, vector, binary, transformers,
                   saltine, direct-sqlite, optparse-applicative,
                   serialise, logging, lz4, hostname, lens,
                   amazonka, amazonka-s3, conduit, conduit-extra,
                   http-types, attoparsec, mmorph,
                   transformers-base, Glob, uri-encode, scrypt,
                   QuickCheck, tasty-quickcheck
  Exposed-Modules: Atavachron.Path
                 , Atavachron.Env
                 , Atavachron.Tree
                 , Atavachron.Commands
                 , Atavachron.Pipelines
                 , Atavachron.Repository
                 , Atavachron.Files
                 , Atavachron.IO
                 , Atavachron.Streaming
                 , Atavachron.Chunk.CDC
                 , Atavachron.Chunk.Encode
                 , Atavachron.Chunk.Builder
                 , Atavachron.Chunk.Cache
                 , Atavachron.Store
                 , Atavachron.Store.S3
                 , Atavachron.Store.LocalFS
                 , Atavachron.Chunk.Tests


  ghc-options: -O2 -Wall -g
               -funbox-strict-fields
               -fwarn-tabs
               -fno-warn-orphans
               -fno-warn-unused-do-bind
               -fno-warn-name-shadowing
               -fprof-auto
               -fprof-cafs

Executable atavachron
  Main-Is:         Main.hs
  Buildable: True
  Hs-Source-Dirs:  src
  if impl(ghc < 8.0)
   Build-Depends:  semigroups
  Build-Depends:   base, containers, hashable, mtl, parsec, wl-pprint,
                   unordered-containers, directory, filepath, random,
                   time, text, streaming, unix, exceptions, bytestring,
                   resourcet, async, vector, binary, transformers,
                   saltine, direct-sqlite, optparse-applicative,
                   serialise, logging, lz4, hostname, lens,
                   amazonka, amazonka-s3, conduit, conduit-extra,
                   http-types, attoparsec, mmorph,
                   transformers-base, Glob, uri-encode, scrypt,
                   QuickCheck, tasty-quickcheck
  Other-Modules:   Atavachron.Path
                 , Atavachron.Env
                 , Atavachron.Tree
                 , Atavachron.Commands
                 , Atavachron.Pipelines
                 , Atavachron.Repository
                 , Atavachron.Files
                 , Atavachron.IO
                 , Atavachron.Streaming
                 , Atavachron.Chunk.CDC
                 , Atavachron.Chunk.Encode
                 , Atavachron.Chunk.Builder
                 , Atavachron.Chunk.Cache
                 , Atavachron.Store
                 , Atavachron.Store.S3
                 , Atavachron.Store.LocalFS
                 , Paths_Atavachron


  ghc-options: -O2 -g -threaded -rtsopts -with-rtsopts=-N -Wall
               -funbox-strict-fields
               -fwarn-tabs
               -fno-warn-orphans
               -fno-warn-unused-do-bind
               -fno-warn-name-shadowing
               -fexternal-interpreter
               -fprof-auto
               -fprof-cafs
               -prof
